; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_archive.c__bfd_ar_spacepad.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_archive.c__bfd_ar_spacepad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_bfd_ar_spacepad.buf = internal global [20 x i8] zeroinitializer, align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_bfd_ar_spacepad(i8* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load i64, i64* %8, align 8
  %12 = call i32 @snprintf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @_bfd_ar_spacepad.buf, i64 0, i64 0), i32 20, i8* %10, i64 %11)
  %13 = call i64 @strlen(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @_bfd_ar_spacepad.buf, i64 0, i64 0))
  store i64 %13, i64* %9, align 8
  %14 = load i64, i64* %9, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp ult i64 %14, %15
  br i1 %16, label %17, label %28

17:                                               ; preds = %4
  %18 = load i8*, i8** %5, align 8
  %19 = load i64, i64* %9, align 8
  %20 = call i32 @memcpy(i8* %18, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @_bfd_ar_spacepad.buf, i64 0, i64 0), i64 %19)
  %21 = load i8*, i8** %5, align 8
  %22 = load i64, i64* %9, align 8
  %23 = getelementptr inbounds i8, i8* %21, i64 %22
  %24 = load i64, i64* %6, align 8
  %25 = load i64, i64* %9, align 8
  %26 = sub i64 %24, %25
  %27 = call i32 @memset(i8* %23, i8 signext 32, i64 %26)
  br label %32

28:                                               ; preds = %4
  %29 = load i8*, i8** %5, align 8
  %30 = load i64, i64* %6, align 8
  %31 = call i32 @memcpy(i8* %29, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @_bfd_ar_spacepad.buf, i64 0, i64 0), i64 %30)
  br label %32

32:                                               ; preds = %28, %17
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @memset(i8*, i8 signext, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
